--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@ dist-ssr
 *.local
 
 # Environment variables
-.env
-.env.local
-.env.*.local
+# .env
+# .env.local
+# .env.*.local
 
 # Editor directories and files
 .vscode/*
@@ -28,3 +28,4 @@ dist-ssr
 *.sln
 *.sw?
 .vercel
+.env*.local
